force-app/main/default/objects/Resume__c/Resume__c.object-meta.xml
<CustomObject>
    <customHelpPage>ResumeHelpPage</customHelpPage>
    <description>Contains data on the resume for a Contact.</description>
    <label>Resume</label>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>