force-app/main/default/objects/Resume__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean field to flag whether the resume is active. If unchecked, the Visualforce resume's will not render.</description>
    <inlineHelpText>If unchecked, the Visualforce resume's will not render.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>