force-app/main/default/objects/Resume__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Master lookup to the Contact record. In the context where a user will have access to the resume of the contact they create, not necessarily the resume of others.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resumes</relationshipLabel>
    <relationshipName>Resumes</relationshipName>
    <type>Lookup</type>
</CustomField>