force-app/main/default/objects/Resume__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Resume summary contains the a summary of qualifications</description>
    <inlineHelpText>Enter in the summary of your qualifications for the position.</inlineHelpText>
    <label>Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>